# aws_debug

./: .gitmodules  CMakeLists.txt  Makefile  README.md  esp_cmake_helper.cmake  main.c
build_helpers/: esp-toolchain.cmake  find_compiler.cmake
include/: FreeRTOSConfig.h  aws_demo_config.h  icon_hal_config.h
